# Langgraph

./: .gitignore  README.md  requirements.txt
.devcontainer/: devcontainer.json
FinancialAssistant/: .gitignore  README.MD  langgraph.json  pyproject.toml
FinancialAssistant/FinancialAssistant/: requirements.txt
FinancialAssistant/docs/: flow-explanation.md  prd.md
FinancialAssistant/docs/changes/: Thinking-out-loud.txt  pytest_migration.md
FinancialAssistant/docs/changes/config-loader/: config_loader_plan.md  config_loader_progress.md
FinancialAssistant/docs/changes/cross-thread-memory/: cross-thread-memory-plan.md  cross-thread-memory-progress.md
FinancialAssistant/docs/rules/: python.md
FinancialAssistant/notebook/: langgraph_financial_assistant.ipynb  langgraph_financial_assistant.py
FinancialAssistant/streamlit_app/: .gitignore  app.py  langgraph.json  requirements.txt  streamlit_test.py  test_imports.py
FinancialAssistant/streamlit_app/.streamlit/: config.toml
FinancialAssistant/streamlit_app/chains/: chat_chain.py  chat_chain.py.new  extraction_chain.py  route_chain.py  summarization_chain.py
FinancialAssistant/streamlit_app/classes/: company_financials.py  config.py  income_statement.py  stock_price.py
FinancialAssistant/streamlit_app/consts/: consts.py
FinancialAssistant/streamlit_app/graph/: graph_state.py  nodes.py  work_flow.py
FinancialAssistant/streamlit_app/graph/nodes/: __init__.py  chat_node.py  extraction_node.py  financial_data_nodes.py  report_node.py  router_node.py  summarization_node.py  utility_nodes.py
FinancialAssistant/streamlit_app/graph/state/: graph_state.py  internal_state.py
FinancialAssistant/streamlit_app/methods/: generate_methods.py  memory_manager.py  util.py
FinancialAssistant/streamlit_app/tests/: test_memory_manager.py  test_summarization_chain.py  test_summarization_node.py  test_updated_nodes.py  test_workflow_integration.py
FinancialAssistant/streamlit_app/utils/: config_loader.py
FinancialChatbot/: Instructions.MD
FinancialReport/: Pipfile  README.MD  notebooklanggraph.ipynb  requirements.txt
FinancialReport/notebook/: langgraph.ipynb
FinancialReport/streamlit_app/: app.py  requirements.txt  test_imports.py
FinancialReport/streamlit_app/chain/: extraction_chain.py
FinancialReport/streamlit_app/classes/: company_financials.py  (+3 more)
(+7 files in other folders)
