[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-assistant"
version = "0.1.0"
description = "A financial assistant application using LangGraph"
readme = "README.MD"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "streamlit",
    "langchain",
    "langgraph>=0.3.0",
    "langchain-anthropic",
    "langchain-groq",
    "langchain-openai",
    "langchain-core",
    "pydantic>=2.0.0",
    "requests",
    "python-dotenv",
    "pytest",
    "pytest-mock",
]

[project.optional-dependencies]
dev = [
    "debugpy",
    "langgraph-cli",
    "ruff",
    "mypy",
    "pre-commit",
]

# Configure hatchling to include streamlit_app in the package
[tool.hatch.build.targets.wheel]
include = [
    "streamlit_app/",
]

[tool.hatch.build.targets.wheel.sources]
"." = "."